Normal Update (1.2.0)
[x] Implemented Productivity Rules feature
[x] Updated timesheet to include productivity, unproductivity, and neutral hours
[x] Modified employee web app usage tracking to reflect productivity categories
[x] Bug-fix in report download functionality
[x] Update in License
